# CoreFlow

./: .env.example  .gitignore  DESIGN_SYSTEM.md  IMPLEMENTATION_GUIDE.md  README.md  deploy.ps1  deploy.sh  docker-compose.yml  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
contracts/core-flow/: Cargo.toml
contracts/core-flow/src/: lib.rs  test.rs
contracts/core-flow/test_snapshots/test/tests/: test_admin_can_be_set_once.1.json  test_approve_cancelled_escrow_fails.1.json  test_cancel_allowed_while_paused.1.json  test_cancel_escrow.1.json  test_cancel_finalized_escrow_fails.1.json  test_cancel_refunds_manager.1.json  test_custody_sum_invariant_fuzz.1.json  test_custody_sum_invariant_fuzz.10.json  test_custody_sum_invariant_fuzz.11.json  test_custody_sum_invariant_fuzz.12.json  test_custody_sum_invariant_fuzz.13.json  test_custody_sum_invariant_fuzz.14.json  test_custody_sum_invariant_fuzz.15.json  test_custody_sum_invariant_fuzz.16.json  test_custody_sum_invariant_fuzz.17.json  test_custody_sum_invariant_fuzz.18.json  test_custody_sum_invariant_fuzz.19.json  test_custody_sum_invariant_fuzz.2.json  test_custody_sum_invariant_fuzz.20.json  test_custody_sum_invariant_fuzz.21.json  test_custody_sum_invariant_fuzz.22.json  test_custody_sum_invariant_fuzz.23.json  test_custody_sum_invariant_fuzz.24.json  test_custody_sum_invariant_fuzz.25.json  test_custody_sum_invariant_fuzz.26.json  test_custody_sum_invariant_fuzz.27.json  test_custody_sum_invariant_fuzz.28.json  (+34 more)
(+80 files in other folders)
