[package]
name = "core-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "=20.5.0"

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "stellar-asset"
path = "examples/stellar_asset.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
