[package]
name = "core-flow"
version = "0.1.0"
edition = "2021"

[features]
# Declares the feature the soroban-sdk macros gate test-only code behind, so
# clippy's unexpected_cfgs lint recognizes the generated #[cfg(feature = "testutils")].
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "=20.5.0"

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"
ed25519-dalek = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
overflow-checks = true

